# rust-apigen

./: Cargo.toml  build.rs  main.rs  spec.yml
pet/: Cargo.toml  category.rs  generics.rs  get_shipments_id_response.rs  lib.rs  miscellaneous.rs  order.rs  pet.rs  post_shipments_body.rs  recursive_container.rs  recursive_object.rs  status.rs  tag.rs  test_enum.rs  test_nested_array_with_object.rs
